--- a/subvt/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/subvt/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="180"
+    android:viewportHeight="180">
+    <!-- original width :: 89 -->
+    <!-- 45.5 = (180 - 89) / 2 -->
+    <group android:translateX="45.5"
+        android:translateY="45.5">
+        <path
+            android:fillColor="#000000"
+            android:pathData="M5.477,31.584V57.68H15.149C16.987,57.68 18.473,59.171 18.473,61.014V70.727H28.157C29.996,70.727 31.482,72.218 31.482,74.062V83.775H57.512V70.721H34.813C32.975,70.721 31.488,69.23 31.488,67.387V62.493C31.488,59.833 33.641,57.674 36.293,57.674H50.671C54.452,57.674 57.512,54.599 57.512,50.813V36.41C57.512,33.75 59.665,31.591 62.317,31.591H67.184C69.022,31.591 70.508,33.082 70.508,34.925V57.68H83.523V31.584H73.839C72.001,31.584 70.515,30.094 70.515,28.25V18.537H60.849C59.011,18.537 57.524,17.046 57.524,15.202V5.477H31.494V18.531H54.193C56.032,18.531 57.518,20.022 57.518,21.865V26.759C57.518,29.419 55.365,31.578 52.713,31.578H38.335C34.554,31.578 31.494,34.653 31.494,38.439V52.848C31.494,55.508 29.342,57.667 26.69,57.667H21.81C19.972,57.667 18.486,56.176 18.486,54.333V31.584H5.477Z" />
+    </group>
 </vector>
