--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -4,6 +4,9 @@
     <dimen name="action_button_height">64dp</dimen>
     <dimen name="action_button_border_radius">10dp</dimen>
     <dimen name="action_button_progress_width">28dp</dimen>
+    <dimen name="action_button_appear_anim_start_offset">200dp</dimen>
+
+    <dimen name="text_appear_anim_start_offset">-30dp</dimen>
 
     <dimen name="introduction_title_margin_top">100dp</dimen>
     <dimen name="introduction_subtitle_margin_top">18dp</dimen>
