--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -13,4 +13,14 @@
     <dimen name="introduction_subtitle_width">260dp</dimen>
     <dimen name="introduction_action_button_margin_bottom">16dp</dimen>
     <dimen name="introduction_icon_volume_start_offset">-388dp</dimen>
+
+    <dimen name="onboarding_content_margin_top">36dp</dimen>
+    <dimen name="onboarding_content_margin_bottom">24dp</dimen>
+    <dimen name="onboarding_content_padding_horizontal">54dp</dimen>
+    <dimen name="onboarding_title_margin_top">32dp</dimen>
+    <dimen name="onboarding_description_margin_top">18dp</dimen>
+    <dimen name="onboarding_image_margin_top">28dp</dimen>
+    <dimen name="onboarding_page_indicator_size">6dp</dimen>
+    <dimen name="onboarding_page_indicator_padding">10dp</dimen>
+    <dimen name="onboarding_bottom_content_padding">16dp</dimen>
 </resources>
