--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="common_padding">16dp</dimen>
+    <dimen name="common_panel_padding">8dp</dimen>
+    <dimen name="common_panel_border_radius">16dp</dimen>
     <dimen name="common_progress_width">36dp</dimen>
 
     <dimen name="action_button_width">266dp</dimen>
@@ -30,4 +32,7 @@
     <dimen name="onboarding_page_indicator_size">6dp</dimen>
     <dimen name="onboarding_page_indicator_padding">10dp</dimen>
     <dimen name="onboarding_bottom_content_padding">16dp</dimen>
+
+    <dimen name="network_status_panel_title_font_size">12sp</dimen>
+    <dimen name="network_status_panel_content_font_size">28sp</dimen>
 </resources>
