--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
     <dimen name="onboarding_bottom_content_padding">16dp</dimen>
 
     <dimen name="network_status_panel_title_font_size">12sp</dimen>
-    <dimen name="network_status_panel_content_font_size">28sp</dimen>
+
+    <dimen name="status_indicator_circle_size">7dp</dimen>
 </resources>
