--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -4,12 +4,15 @@
     <dimen name="common_panel_padding">8dp</dimen>
     <dimen name="common_panel_border_radius">16dp</dimen>
     <dimen name="common_progress_width">36dp</dimen>
+    <dimen name="common_content_margin_top">24dp</dimen>
 
     <dimen name="action_button_width">266dp</dimen>
     <dimen name="action_button_height">64dp</dimen>
     <dimen name="action_button_border_radius">10dp</dimen>
     <dimen name="action_button_progress_width">28dp</dimen>
     <dimen name="action_button_appear_anim_start_offset">200dp</dimen>
+
+    <dimen name="network_selector_button_height">38dp</dimen>
 
     <dimen name="appear_anim_start_offset">-30dp</dimen>
 
@@ -41,4 +44,6 @@
     <dimen name="network_status_icon_size">22dp</dimen>
     <dimen name="network_status_icon_spacing">6dp</dimen>
     <dimen name="network_status_balance_margin_top">12dp</dimen>
+
+    <dimen name="validator_list_content_padding_top">158dp</dimen>
 </resources>
