--- a/subvt/src/main/res/values/themes.xml
+++ b/subvt/src/main/res/values/themes.xml
@@ -2,15 +2,9 @@
 <resources>
 
     <style name="Theme.SubVT" parent="android:Theme.Material.Wallpaper.NoTitleBar">
-        <item name="windowSplashScreenBackground">@color/background</item>
+        <!--item name="windowSplashScreenBackground">@color/background</item>
         <item name="windowSplashScreenIconBackgroundColor">@color/background</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen_icon</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen_icon</item-->
         <item name="android:background">@color/background</item>
-
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 </resources>
