--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="common_panel_border_radius">16dp</dimen>
     <dimen name="common_progress_width">36dp</dimen>
     <dimen name="common_content_margin_top">24dp</dimen>
+    <dimen name="common_data_panel_content_margin_top">12dp</dimen>
 
     <dimen name="action_button_width">266dp</dimen>
     <dimen name="action_button_height">64dp</dimen>
@@ -12,6 +13,8 @@
     <dimen name="action_button_progress_width">28dp</dimen>
     <dimen name="action_button_appear_anim_start_offset">200dp</dimen>
 
+    <dimen name="top_small_button_size">36dp</dimen>
+    <dimen name="top_small_button_image_size">18dp</dimen>
     <dimen name="network_selector_button_height">38dp</dimen>
 
     <dimen name="appear_anim_start_offset">-30dp</dimen>
@@ -46,4 +49,7 @@
     <dimen name="network_status_balance_margin_top">12dp</dimen>
 
     <dimen name="validator_list_content_padding_top">158dp</dimen>
+
+    <dimen name="validator_details_identicon_height">274dp</dimen>
+    <dimen name="validator_details_content_padding_top">128dp</dimen>
 </resources>
