--- a/subvt/src/main/res/values/duration.xml
+++ b/subvt/src/main/res/values/duration.xml
@@ -4,6 +4,7 @@
 
     <integer name="snackbar_anim_duration_ms">500</integer>
     <integer name="snackbar_medium_display_duration_ms">2500</integer>
+    <integer name="snackbar_short_display_duration_ms">1000</integer>
 
     <integer name="introduction_icon_volume_anim_delay_ms">250</integer>
 
