--- a/subvt/src/main/res/values/dimens.xml
+++ b/subvt/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="common_data_panel_content_margin_top">12dp</dimen>
     <dimen name="common_bottom_gradient_height">104dp</dimen>
     <dimen name="common_scrollable_content_margin_bottom">54dp</dimen>
+    <dimen name="common_scrollable_tab_content_margin_bottom">88dp</dimen>
     <dimen name="common_header_full_alpha_scroll_amount">42dp</dimen>
 
     <dimen name="action_button_width">266dp</dimen>
@@ -63,4 +64,7 @@
     <dimen name="validator_details_nomination_list_max_height">120dp</dimen>
     <dimen name="validator_details_icon_size">38dp</dimen>
     <dimen name="validator_details_margin_horizontal">4dp</dimen>
+
+    <dimen name="my_validators_add_validator_button_width">266dp</dimen>
+    <dimen name="my_validators_add_validator_button_height">52dp</dimen>
 </resources>
